--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 日本語を勉強しましょう
 SEOTitle: 泡泡的每日日语打卡
 header-img: img/post-bg-desk.jpg
 email: 3033565751@qq.com
-description: "一起来学习吧"
+description: "一起来学习吧!!!"
 keyword: "自学日语"
 url: "https://yuki0930.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
